<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="255dp"
        android:layout_height="59dp"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="8dp"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/author"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageHospital"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <ImageView
        android:id="@+id/imageHospital"
        android:layout_width="134dp"
        android:layout_height="120dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/userName"
        app:layout_constraintEnd_toStartOf="@+id/author"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_baseline_local_hospital_24" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="620dp"
        android:text="@string/author"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintStart_toEndOf="@+id/imageHospital"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/userAge"
        app:layout_constraintStart_toStartOf="@+id/userAge"
        app:layout_constraintTop_toBottomOf="@+id/imageHospital" />

    <EditText
        android:id="@+id/userAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginBottom="29dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="212dp"
        android:layout_height="46dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="21dp"
        android:onClick="btnSave"
        android:text="@string/btn_save"
        app:layout_constraintBottom_toTopOf="@+id/btnPressure"
        app:layout_constraintEnd_toEndOf="@+id/userAge"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/userAge"
        app:layout_constraintTop_toBottomOf="@+id/userAge" />

    <Button
        android:id="@+id/btnPressure"
        android:layout_width="211dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:onClick="btnPressure"
        android:text="@string/btn_pressure"
        app:layout_constraintEnd_toEndOf="@+id/btnSave"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnSave"
        app:layout_constraintTop_toBottomOf="@+id/btnSave" />

    <Button
        android:id="@+id/btnHealth"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:onClick="btnHealth"
        android:text="@string/btn_health"
        app:layout_constraintEnd_toEndOf="@+id/btnPressure"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btnPressure"
        app:layout_constraintTop_toBottomOf="@+id/btnPressure" />

</androidx.constraintlayout.widget.ConstraintLayout>